// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render rtl variant 1`] = `
.c0 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c1 {
  position: absolute;
  height: 12px;
  width: 12px;
  top: 16px;
  left: unset;
  right: 16px;
  cursor: pointer;
}

.c1 svg {
  display: block;
}

.c2 {
  border: 0;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c2::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c2:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

<div>
  <label
    class="c0"
    display="block"
    for="startDate"
  >
    <div
      class="c1"
      height="12px"
      width="12px"
    >
      <svg
        class=""
        color="#BCBEC0"
        height="12px"
        viewBox="0 0 12 12"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 1H7v1h1V1zM6.5 6.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM6 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 6 3zm3.5 5.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0-2h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM9 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 9 3zm-.5 2.5h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zm-3 0h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zm-2 3h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM11 1h-1v1h1v9H1V2h1V1H1a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM3.5 6.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM5 1H4v1h1V1zm1.5 7.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm-4-3h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zM3 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 3 3z"
          fill="currentColor"
          fill-rule="nonzero"
        />
      </svg>
    </div>
    <input
      aria-label="startDate"
      autocomplete="off"
      class="c2"
      color="#001217"
      data-testid="DatepickerInput"
      font-family="Montserrat, sans-serif"
      font-size="14px"
      font-weight="600"
      id="startDate"
      placeholder="Placeholder"
      tabindex="0"
      value=""
      width="100%"
    />
  </label>
</div>
`;

exports[`should render vertical variant 1`] = `
.c0 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c1 {
  border: 0;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: inset 0px -3px 0 #00aeef;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

<div>
  <label
    class="c0"
    display="block"
    for="startDate"
  >
    <input
      aria-label="startDate"
      autocomplete="off"
      class="c1"
      color="#001217"
      data-testid="DatepickerInput"
      font-family="Montserrat, sans-serif"
      font-size="14px"
      font-weight="600"
      id="startDate"
      placeholder="Placeholder"
      tabindex="0"
      value="14/11/1992"
      width="100%"
    />
  </label>
</div>
`;

exports[`should render with icon 1`] = `
.c0 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c1 {
  position: absolute;
  height: 12px;
  width: 12px;
  top: 16px;
  left: 16px;
  right: unset;
  cursor: pointer;
}

.c1 svg {
  display: block;
}

.c2 {
  border: 0;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c2::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c2::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c2:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

<div>
  <label
    class="c0"
    display="block"
    for="startDate"
  >
    <div
      class="c1"
      height="12px"
      width="12px"
    >
      <svg
        class=""
        color="#BCBEC0"
        height="12px"
        viewBox="0 0 12 12"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 1H7v1h1V1zM6.5 6.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM6 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 6 3zm3.5 5.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm0-2h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM9 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 9 3zm-.5 2.5h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zm-3 0h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zm-2 3h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM11 1h-1v1h1v9H1V2h1V1H1a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM3.5 6.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zM5 1H4v1h1V1zm1.5 7.5h-1a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1zm-4-3h1a.5.5 0 0 0 0-1h-1a.5.5 0 0 0 0 1zM3 3a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 0-1 0v2A.5.5 0 0 0 3 3z"
          fill="currentColor"
          fill-rule="nonzero"
        />
      </svg>
    </div>
    <input
      aria-label="startDate"
      autocomplete="off"
      class="c2"
      color="#001217"
      data-testid="DatepickerInput"
      font-family="Montserrat, sans-serif"
      font-size="14px"
      font-weight="600"
      id="startDate"
      placeholder="Placeholder"
      tabindex="0"
      value=""
      width="100%"
    />
  </label>
</div>
`;

exports[`should render with value 1`] = `
.c0 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c1 {
  border: 0;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

<div>
  <label
    class="c0"
    display="block"
    for="startDate"
  >
    <input
      aria-label="startDate"
      autocomplete="off"
      class="c1"
      color="#001217"
      data-testid="DatepickerInput"
      font-family="Montserrat, sans-serif"
      font-size="14px"
      font-weight="600"
      id="startDate"
      placeholder="Placeholder"
      tabindex="0"
      value="14/11/1992"
      width="100%"
    />
  </label>
</div>
`;

exports[`should render without icon 1`] = `
.c0 {
  display: block;
  position: relative;
  border: 1px solid #BCBEC0;
  background: #ffffff;
  border-radius: 2px;
  margin: 0;
}

.c1 {
  border: 0;
  width: 100%;
  min-height: 46px;
  background: #ffffff;
  font-family: Montserrat,sans-serif;
  color: #001217;
  font-size: 14px;
  font-weight: 600;
  box-shadow: none;
  cursor: pointer;
  box-sizing: border-box;
  outline: 0;
}

.c1::-webkit-input-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1::-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

.c1:-moz-placeholder {
  font-weight: 500;
  color: #929598;
}

<div>
  <label
    class="c0"
    display="block"
    for="startDate"
  >
    <input
      aria-label="startDate"
      autocomplete="off"
      class="c1"
      color="#001217"
      data-testid="DatepickerInput"
      font-family="Montserrat, sans-serif"
      font-size="14px"
      font-weight="600"
      id="startDate"
      placeholder="Placeholder"
      tabindex="0"
      value=""
      width="100%"
    />
  </label>
</div>
`;
